test/org/midica/testfiles/failing/zero-for-note.midica
INCLUDE inc/instruments.midica

0 c -
